--- a/workshop/views/article3.html
+++ b/workshop/views/article3.html
@@ -18,6 +18,7 @@
                 <li><a href="article.html">Articles</a></li>
                 <li><a href="forum.html">Forum</a></li>
                 <li><a href="atelier.html">Atelier</a></li>
+                <li><a href="aide.html">Aide</a></li>
             </ul>
         </nav>        
     </header>
