ajout du phishing

--- a/workshop/views/phishing.html
+++ b/workshop/views/phishing.html
@@ -14,20 +14,22 @@
         <img src="images/logo.png" alt="Logo de Gardiens du Web" class="logo">
         <nav>
             <ul>
-                <li><a href="/">Accueil</a></li>
-                <li><a href="article.html">Articles</a></li>
-                <li><a href="forum.html">Forum</a></li>
-                <li><a href="atelier.html">Atelier</a></li>
-                <li><a href="aide.html">Aide</a></li>
+                <li><a href="/">Accueil 🏠</a></li>
+                <li><a href="article.html">Articles 📖</a></li>
+                <li><a href="forum.html">Forum 💬</a></li>
+                <li><a href="atelier.html">Ateliers 🛠️</a></li>
+                <li><a href="aide.html">Aide ❓</a></li>
             </ul>
         </nav>        
     </header>
     
     <main>
         <section>
-            <h2>Exemple de phishing</h2>
-            <img src="chemin/vers/image1.jpg" alt="Exemple de phishing">
-            <p>Description de l'image ou explication.</p>
+            <h2>Explication du phishing Instagram</h2>
+            <img src="images/phishing_instagram1.png" alt="Explication du phishing Instagram">
+            <img src="images/phishing_instagram.png" alt="Explication du phishing Instagram">
+            <p>Le phishing est une attaque qui profite d'un biais de confiance (une fausse adresse mail d'un membre de votre famille ou une fausse adresse mail d'un entreprise de confiance) grâce à cela vous allez cliquer sur un lien frauduleux ou télécharger un fichier malicieux. une fois sur la page internet dans notre cas vous penser vous connecter à Instagram mais la vérité est que je suis entrain de récupérer votre mot de passe et login grâce au-quelle je peut vous voler votre compte.
+                Moralité il faut apprendre comment détecter un faux mail et détecter les faux sites web.</p>
 
             <a href="atelier.html" class="button" id="back-button">Retour à l'atelier</a>
         </section>
