--- a/workshop/views/phishing.html
+++ b/workshop/views/phishing.html
@@ -39,5 +39,7 @@
      <footer>
         <p>© 2024 Gardiens du Web. WORKSHOP 2024 - Aymeric, Anthony, Flavien et Juliette.</p>
     </footer>
+    <!-- Ajouter le script Tidio -->
+    <script src="https://code.tidio.co/tqmwp1oz5ad8pwrttkxbeqfrkxvneh0m.js" async></script>
 </body>
 </html>
