--- a/workshop/views/phishing.html
+++ b/workshop/views/phishing.html
@@ -25,11 +25,13 @@
     
     <main>
         <section>
-            <h2>Explication du phishing Instagram</h2>
-            <img src="images/phishing_instagram1.png" alt="Explication du phishing Instagram">
-            <img src="images/phishing_instagram.png" alt="Explication du phishing Instagram">
-            <p>Le phishing est une attaque qui profite d'un biais de confiance (une fausse adresse mail d'un membre de votre famille ou une fausse adresse mail d'un entreprise de confiance) grâce à cela vous allez cliquer sur un lien frauduleux ou télécharger un fichier malicieux. une fois sur la page internet dans notre cas vous penser vous connecter à Instagram mais la vérité est que je suis entrain de récupérer votre mot de passe et login grâce au-quelle je peut vous voler votre compte.
-                Moralité il faut apprendre comment détecter un faux mail et détecter les faux sites web.</p>
+            <h2>Comprendre le Phishing sur Instagram</h2>
+            <img src="images/phishing_instagram2.png" alt="Exemple de phishing sur Instagram">
+            <img src="images/phishing_instagram1.png" alt="Exemple de phishing sur Instagram">
+            <img src="images/phishing_instagram.png" alt="Capture d'écran d'un site de phishing">
+            <p>Le phishing est une technique d'escroquerie en ligne qui exploite la confiance des utilisateurs. Les attaquants se présentent souvent comme des membres de votre famille ou des entreprises de confiance via de fausses adresses e-mail. L'objectif est de vous inciter à cliquer sur un lien frauduleux ou à télécharger un fichier malveillant.</p>
+            <p>Dans le cas présent, vous pourriez croire que vous vous connectez à Instagram, mais en réalité, vos identifiants (mot de passe et nom d'utilisateur) sont en train d'être récupérés par un tiers malveillant, ce qui peut entraîner le vol de votre compte.</p>
+            <p>Il est donc crucial d'apprendre à détecter les faux e-mails et les sites web frauduleux. Restez vigilant et vérifiez toujours les liens avant de vous connecter à un service en ligne.</p>
 
             <a href="atelier.html" class="button" id="back-button">Retour à l'atelier</a>
         </section>
